--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="SmartShop">
+    <meta name="apple-mobile-web-app-title" content="DUYHALAM">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#4f46e5">
-    <title>SmartShop - Quản lý Kho Cloud</title>
+    <title>DUYHALAM - Quản lý Cửa hàng</title>
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/1162/1162456.png">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -28,6 +28,12 @@
           50% { opacity: 0.7; }
         }
         .animate-pulse-soft { animation: pulse-soft 2s infinite; }
+        .glass-card {
+          background: rgba(255, 255, 255, 0.8);
+          backdrop-filter: blur(12px);
+          -webkit-backdrop-filter: blur(12px);
+          border: 1px solid rgba(255, 255, 255, 0.3);
+        }
     </style>
 <script type="importmap">
 {
